--- a/writings/YYYYMMDD-template/index.html
+++ b/writings/YYYYMMDD-template/index.html
@@ -79,13 +79,7 @@
 
         </article>
 
-        <aside>
-          <!-- ↓↓↓ replace me with your blog post's sidebar content ↓↓↓ -->
-          <b style="color:red;">Optional Sidebar</b>
-          <a href="#">Fake Link</a>
-          <!-- ↑↑↑ replace me with your blog post's sidebar content ↑↑↑ -->
-        </aside>
-
+        <script src="/_includes/blog_toc.js"></script>
       </div>
     </main>
 
