--- a/writings/20230112-blog_design_intro/index.html
+++ b/writings/20230112-blog_design_intro/index.html
@@ -98,10 +98,9 @@
           <p>
             There are two element's that make up your blog posts, an
             &lt;article&gt; element, where the main content of your blog post
-            will go, and an optional &lt;aside&gt; element for a sidebar. The
-            sidebar lies below the article on mobile screens, and to the right
-            on desktop. Excluding the sidebar just leaves that space empty on
-            desktop screens, with no noticeable effect on mobile.
+            will go, and an automatically generated &lt;aside&gt; element for a
+            table of contents sidebar. The sidebar lies below the article on
+            mobile screens, and to the right on desktop. 
           </p>
           <p>
             The <b>&lt;article&gt;</b> element is laid out as follows:
@@ -150,14 +149,14 @@
           <h2>Conclusion</h2>
           <p>
             This article discussed the directory and HTML structure of the blog
-            post template. Notice that this article intentionally does not have
-            a sidebar. The
+            post template. The
             <a href="/writings/20230113-blog_post_tags">next article</a> will
-            discuss the different tags you can use for the blog posts, and will
-            contain the sidebar.
+            discuss the different tags you can use for the blog posts.
           </p>
           <a href="/writings/20230113-blog_post_tags/">Next: Blog Post Tags</a>
         </article>
+
+        <script src="/_includes/blog_toc.js"></script>
       </div>
     </main>
 
