Revert "Sidebar Auto Table of Contents"
This reverts commit e7f735fa6b4fbce1af64ed2a36e613ea3bcc1692.

--- a/writings/20230112-blog_design_intro/index.html
+++ b/writings/20230112-blog_design_intro/index.html
@@ -98,9 +98,10 @@
           <p>
             There are two element's that make up your blog posts, an
             &lt;article&gt; element, where the main content of your blog post
-            will go, and an automatically generated &lt;aside&gt; element for a
-            table of contents sidebar. The sidebar lies below the article on
-            mobile screens, and to the right on desktop. 
+            will go, and an optional &lt;aside&gt; element for a sidebar. The
+            sidebar lies below the article on mobile screens, and to the right
+            on desktop. Excluding the sidebar just leaves that space empty on
+            desktop screens, with no noticeable effect on mobile.
           </p>
           <p>
             The <b>&lt;article&gt;</b> element is laid out as follows:
@@ -149,14 +150,14 @@
           <h2>Conclusion</h2>
           <p>
             This article discussed the directory and HTML structure of the blog
-            post template. The
+            post template. Notice that this article intentionally does not have
+            a sidebar. The
             <a href="/writings/20230113-blog_post_tags">next article</a> will
-            discuss the different tags you can use for the blog posts.
+            discuss the different tags you can use for the blog posts, and will
+            contain the sidebar.
           </p>
           <a href="/writings/20230113-blog_post_tags/">Next: Blog Post Tags</a>
         </article>
-
-        <script src="/_includes/blog_toc.js"></script>
       </div>
     </main>
 
