--- a/writings/20230113-blog_post_tags/index.html
+++ b/writings/20230113-blog_post_tags/index.html
@@ -153,7 +153,20 @@
           </p>
         </article>
 
-        <script src="/_includes/blog_toc.js"></script>
+        <aside>
+          <b>This sidebar is optional.</b>
+          <p>
+            You can put text here if you want.
+            You can also put lil images to spruce things up, as shown below.
+          </p>
+          <img src="sidebar-img.png" alt="/Blog Post 1 Sidebar Image" />
+          <p>
+            You can even put links here. This could be a good area for links
+            that are supplementary to the blog post.
+          </p>
+          <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">Very Related Link</a>
+        </aside>
+
       </div>
     </main>
 
