--- a/writings/YYYYMMDD-template/index.html
+++ b/writings/YYYYMMDD-template/index.html
@@ -79,7 +79,13 @@
 
         </article>
 
-        <script src="/_includes/blog_toc.js"></script>
+        <aside>
+          <!-- ↓↓↓ replace me with your blog post's sidebar content ↓↓↓ -->
+          <b style="color:red;">Optional Sidebar</b>
+          <a href="#">Fake Link</a>
+          <!-- ↑↑↑ replace me with your blog post's sidebar content ↑↑↑ -->
+        </aside>
+
       </div>
     </main>
 
