og:image test for blog

--- a/about/index.html
+++ b/about/index.html
@@ -42,7 +42,7 @@
         </p>
         <h2>Background</h2>
         <p>
-          I was born and raised in a small town in Venezuela called Chivacoa. After graduating high school I moved to Texas solely for the contuniation of my education. I began at Austin Community College as a computer science major, and later transfered to UT.
+          I was born and raised in a small town in Venezuela called Chivacoa. After graduating high school I moved to Texas solely for the continuation of my education. I began at Austin Community College as a computer science major, and later transfered to UT.
         </p>
         <p>
           In an attempt to keep the stereotype alive, I am an avid climber and coder on my free time :)
