--- a/writings/20230115-superposition/index.html
+++ b/writings/20230115-superposition/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Juan Gonzalez De Mendoza" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="./title-card.png" />
+    <meta property="og:image" content="https://juangmendoza.com/writings/20230115-superposition/title-card.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <link rel="icon" href="/icon.png">
     <link rel="stylesheet" type="text/css" href="/main.css">
