--- a/writings/index.html
+++ b/writings/index.html
@@ -168,7 +168,7 @@
             </h3>
             <span class="date-text">January 15th, 2023</span>
             <p>
-              A beginners guide to superposition
+              A beginner's guide to superposition
             </p>
           </article>
         </div>
