removed assumption that probability means ignorance

--- a/writings/20230115-superposition/index.html
+++ b/writings/20230115-superposition/index.html
@@ -102,7 +102,7 @@
 
           <h4>Wait but did you answer the question?</h5>
           <p>
-            A careful reader might notice that previously we asked what a superposition is, which is made of amplitudes, a & b, but the last section actually answered what the absolute value squared of an amplitude is \(|a|^2\) & \(|b|^2\)(One could even go further and argue that saying they are "a probability" does not even answer what these represent either). The reality is that we actually do not know what an amplitude represents physically, and no one really cares-- Is what a physicist back in the early 1900s would say! Nowadays, the task of answering this question is an entire field of physics. Any theory attempting to explain amplitudes is called "an interpretation of quantum mechanics". This is considered a highly philosophical field of physics, considering most of the highly regarded interpretations have no way of being experimentally tested.
+            A careful reader might notice that previously we asked what a superposition is, which is made of amplitudes, a & b, but the last section actually answered what the absolute value squared of an amplitude is \(|a|^2\) & \(|b|^2\). The reality is that we actually do not know what an amplitude represents physically, and no one really cares-- Is what a physicist back in the early 1900s would say! Nowadays, the task of answering this question is an entire field of physics. Any theory attempting to explain amplitudes is called "an interpretation of quantum mechanics". This is considered a highly philosophical field of physics, considering most of the highly regarded interpretations have no way of being experimentally tested.
           </p>
 
 
