--- a/writings/20230116-complexity/index.html
+++ b/writings/20230116-complexity/index.html
@@ -50,7 +50,7 @@
 
          <p>Similarly, there is another notation used called Big Omega which is the opposite of Big O. A function f(x) is said to be Big Omega of g(x) if after some point \(x_0\) it is always above g(x)</p>
 
-         \[  \exists x_0 s.t. \forall x, x > x_0, g(x) > f(x) -> f(n) \in O(g(x)) \]
+         \[  \exists x_0 \forall x > x_0 , g(x) > f(x) -> f(n) \in O(g(x)) \]
          <p>This g(x) is then considered the best-case complexity of f(x). Now you can quantify resources like a real theoretical computer scientist!</p>
 
          <h3>Classical Complexity Theory</h3>
