--- a/writings/20230116-complexity/index.html
+++ b/writings/20230116-complexity/index.html
@@ -94,13 +94,13 @@
           <p>P = NP would mean that every problem that can be verified efficiently, can also be solved polynomially. Which implies the shaded region above is non-existent. This would have dramatic consequences, and our world would be quite different. For example, not only would you be able to claim one million dollars for solving the P vs. NP problem, but an extra 5 million dollars because then you could solve all the other ones in polynomial time! Because of this, even though no one has solved the P vs. NP problem, they are assumed not to be equal. It is common to state as a conjecture that P != NP. If you are interested in learning more about this conjecture, I encourage you to read <a href="https://www.scottaaronson.com/papers/npcomplete.pdf">this paper</a></p>
 
           <hr>
-          <p id="footnote-1">The word algorithm is very vague in terms of mathematics. If you were to read any of the concepts related to this post in a more formal context, such as a textbook, they will use “Turing Machine” instead of "algorithm". In order to avoid extending this post further by explaining what a Turing Machine is, I decided to omit this. The ideas presented in this post will remain correct if the reader has a basic understanding of what an algorithm is. If you want to be really careful about these definitions, I recommend you learn what a Turing machine is, and replace every instance of “algorithm” with it!</p>
+          <p id="footnote-1">[1] The word algorithm is very vague in terms of mathematics. If you were to read any of the concepts related to this post in a more formal context, such as a textbook, they will use “Turing Machine” instead of "algorithm". In order to avoid extending this post further by explaining what a Turing Machine is, I decided to omit this. The ideas presented in this post will remain correct if the reader has a basic understanding of what an algorithm is. If you want to be really careful about these definitions, I recommend you learn what a Turing machine is, and replace every instance of “algorithm” with it!</p>
 
-          <p id="footnote-2">This is a reference to the complexity zoo. A website created by S. Aaronson meant to keep track of all the complexity classes described in the literature</p>
+          <p id="footnote-2">[2] This is a reference to the complexity zoo. A website created by S. Aaronson meant to keep track of all the complexity classes described in the literature</p>
 
-          <p id="footnote-3">If stalling is too hand-wavy for you, you can imagine putting a for loop after using subroutine M, where the range of the loop is exponential in x. The body of the loop can be your favorite arithmetic operation or anything else that does not affect the output</p>
+          <p id="footnote-3">[3] If stalling is too hand-wavy for you, you can imagine putting a for loop after using subroutine M, where the range of the loop is exponential in x. The body of the loop can be your favorite arithmetic operation or anything else that does not affect the output</p>
 
-          <p id="footnote-4">This operator returns 1 if at least one of the variables is 1, read <a href="https://en.wikipedia.org/wiki/Logical_disjunction#Semantics">this</a> for more details</p>
+          <p id="footnote-4">[4] This operator returns 1 if at least one of the variables is 1, read <a href="https://en.wikipedia.org/wiki/Logical_disjunction#Semantics">this</a> for more details</p>
 
           
 
