--- a/writings/20230116-complexity/index.html
+++ b/writings/20230116-complexity/index.html
@@ -37,7 +37,7 @@
             <span class="date-text">January 31st, 2023</span>
           </section>
 
-          <h3>Asymptotic Notation</h3>
+          <h4>Asymptotic Notation</h4>
           <p>In order to be able to quantify the amount of resources an algorithm requires, we must first learn asymptotic notation, which is the standard in computer science to quantify them. Asymptotic notation describes a function in terms of its behavior as the input approaches infinity. For example let’s start by defining one of the most used notations, the Big O notation.
           Say you have a function f(x) which you are comparing to another function g(x). Now let’s assume that we ignore anything that happens to both functions before some arbitrary point \(x_0\), but after this point, f(x) is always below g(x). See the figure below for an example
           </p>
@@ -53,7 +53,7 @@
          \[  \exists x_0 \text{ s.t. } \forall x > x_0 \text{,  } g(x) < f(x) \Rightarrow f(n) \in \Omega(g(x)) \]
          <p>This g(x) is then considered the best-case complexity of f(x). Now you can quantify resources like a real theoretical computer scientist!</p>
 
-         <h3>Classical Complexity Theory</h3>
+         <h4>Classical Complexity Theory</h4>
          <p>
          To go deeper into complexity theory, we must go over a little bit of set theory. More specifically, languages. Buckle up. A language is a set of words built from a defined alphabet. In computer science we usually choose our alphabet to be {0,1}. Therefore, a language can be defined as a collection of bitstrings. For example; one could define a language L as a language where every string must end with a 0</p>
           \[L = \{0, 00, 000, …, 10, 100, 1000, …, 110, 1100, …\}\]
@@ -66,18 +66,18 @@
             Welcome to the complexity zoo, where we define creatures and try to find relationships with other ones in the zoo.
 
           </p>
-          <h3>P vs. NP (+ an example of a language!)</h3>
+          <h4>P vs. NP (+ an example of a language!)</h4>
           <p>
           Although not the main topic I want to discuss in this post, one cannot introduce complexity theory without mentioning the famous millennial problem of P vs. NP. We already defined P above, so now let me tell you what NP is.
           At a high level, a language L belongs in NP if we can verify a word “x” belongs in L in polynomial time with help from another bitstring “c”, called the certificate. We are guaranteed to be able to recognize words in the language through the existence of an accompanying certificate. Pay attention to the slight differences with the class P. The first one is that the algorithm is given an extra piece of information asides from the word, a certificate. The second one, maybe a bit more subtle, is that the case where the word does not belong in L is not specified. This means that given a word that does not belong in the language, our algorithm could run forever and it would still be considered to be in NP. If it helps, at a high-level NP is usually described as "languages that can be verified efficiently".</p>
           <img src="./NP.png" alt="NP Machine" style="max-height:300px">
           <p>
-          So far this post has been very abstract, so let’s come down from our theory cloud a little bit and talk about an example, satisfiability problems (also called SAT). Imagine there are n boolean variables x_1, x_2, …, x_n, and we now make groups out of them, relating them with the \(\lor\) (OR) operator <a href="#footnote-3">[3]</a>, for example:</p>
+          So far this post has been very abstract, so let’s come down from our theory cloud a little bit and talk about an example, satisfiability problems (also called SAT). Imagine there are n boolean variables \(x_1, x_2, …, x_n\) and we now make groups out of them, relating them with the \(\lor\) (OR) operator <a href="#footnote-3">[3]</a>, for example:</p>
 
           \[x_1   \lor x_3 \]
           \[x_2   \lor ¬x_1  \lor x_4\]
 
-          <p>Each one of these groups is called a “clause”. If there exists an assignment for each variable, such that every clause evaluates to 1, then we say the problem is satisfiable. The example above is satisfiable, take the instance x_1 = 1, x_2 = 1, x_3 = 0, x_4 = 0.</p>
+          <p>Each one of these groups is called a “clause”. If there exists an assignment for each variable, such that every clause evaluates to 1, then we say the problem is satisfiable. The example above is satisfiable, take the instance \(x_1 = 1\), \(x_2 = 1\), \(x_3 = 0\), \(x_4 = 0\).</p>
           \[1   \lor 0  = 1\]
           \[1   \lor 0   \lor 0 = 1\]
 
@@ -96,7 +96,7 @@
           <hr>
           <p id="footnote-1">[1] The word algorithm is very vague in terms of mathematics. If you were to read any of the concepts related to this post in a more formal context, such as a textbook, they will use “Turing Machine” instead of "algorithm". In order to avoid extending this post further by explaining what a Turing Machine is, I decided to omit this. The ideas presented in this post will remain correct if the reader has a basic understanding of what an algorithm is. If you want to be really careful about these definitions, I recommend you learn what a Turing machine is, and replace every instance of “algorithm” with it!</p>
 
-          <p id="footnote-2">[2] This is a reference to the complexity zoo. A website created by S. Aaronson meant to keep track of all the complexity classes described in the literature</p>
+          <p id="footnote-2">[2] This is a reference to the <a href="https://complexityzoo.net/Complexity_Zoo">complexity zoo</a>. A website created to keep track of all the complexity classes described in the literature</p>
 
           <p id="footnote-3">[3] If stalling is too hand-wavy for you, you can imagine putting a for loop after using subroutine M, where the range of the loop is exponential in x. The body of the loop can be your favorite arithmetic operation or anything else that does not affect the output</p>
 
