removed youtube link

--- a/resume/index.html
+++ b/resume/index.html
@@ -36,10 +36,8 @@
           <section id="overview">
             <h2>Juan G Mendoza</h2>
             <nav class="flex">
-              <a href="https://github.com/JuanGMendoza/">Github</a> |
-              <a href="https://www.youtube.com/channel/UC560ZaRh8BrtR00J4dH7PgA">
-               Youtube
-              </a>
+              <a href="https://github.com/JuanGMendoza/">Github</a>
+              
             </nav>
           </section>
 
