--- a/resume/index.html
+++ b/resume/index.html
@@ -114,7 +114,7 @@
                 </span>
               </span>
               <span>
-                Summer 2020 - Present
+                Summer 2020 - Fall 2020
               </span>
             </div>
             <p class="inset-block">
