--- a/writings/20230116-complexity/index.html
+++ b/writings/20230116-complexity/index.html
@@ -37,6 +37,9 @@
             <span class="date-text">January 31st, 2023</span>
           </section>
 
+          <h4>Preface</h4>
+
+          This post is a product of an introduction to complexity theory I gave to some of my physicist colleagues in quantum information that did not have a proper introduction to some of these computer science topics. Therefore it is written for the scientist from a different field that wants to dip their toes in computer science, in order to understand papers or talks including these topic to a greater extent. This has a couple of consequences: One is that this post will go deeper into the details of complexity theory than your average introduction, which in turn means that it is not meant for a layman audience. I do still encourage the layman to read this post, because although mathematical languages can be a hard to grasp topic, the pre-requisities required to understand this post do not go beyond understanding the difference between a polynomial and an exponential equation.
           <h4>Asymptotic Notation</h4>
           <p>In order to be able to quantify the amount of resources an algorithm requires, we must first learn asymptotic notation, which is the standard in computer science. Asymptotic notation describes a function in terms of its behavior as the input approaches infinity. For example let’s start by defining one of the most common notations, the Big O notation.
           Say you have a function f(x) which you are comparing to another function g(x). Now let’s assume that we ignore anything that happens to both functions before some arbitrary point \(x_0\), but after this point, f(x) is always below g(x). See the figure below for an example
@@ -51,7 +54,7 @@
          <p>Similarly, there is another notation used called Big Omega which is the opposite of Big O. A function f(x) is said to be Big Omega of g(x) if after some point \(x_0\) it is always above g(x)</p>
 
          \[  \exists x_0 \text{ s.t. } \forall x > x_0 \text{,  } g(x) < f(x) \Rightarrow f(n) \in \Omega(g(x)) \]
-         <p>This g(x) is then considered the best-case complexity of f(x). Now you can quantify resources like a real theoretical computer scientist!</p>
+         <p>This g(x) is then considered the best-case complexity of f(x). Now you can quantify resources like a real theoretical computer scientist! </p>
 
          <h4>Classical Complexity Theory</h4>
          <p>
@@ -96,6 +99,18 @@
 
           <p>P = NP would mean that every problem that can be verified efficiently, can also be solved polynomially. Which implies the shaded region above is non-existent. This would have dramatic consequences, and our world would be quite different. For example, not only would you be able to claim one million dollars for solving the P vs. NP problem, but an extra 5 million dollars because then you could solve all the other ones in polynomial time! Because of this, even though no one has solved the P vs. NP problem, they are assumed not to be equal. It is common to state as a conjecture that P != NP. If you are interested in learning more about this conjecture, I encourage you to read <a href="https://www.scottaaronson.com/papers/npcomplete.pdf">this paper</a></p>
 
+          <h4>Further Reading: Common Asymptotic Behavior Criticism </h4>
+
+          <p>Classifying resources in terms of their asymptotic behaviour, allows us to compare them as the problems sizes get bigger. It does not say anything about how many resources a problem will need, but only how the resources needed will change as we go towards bigger problems. Considering in practice we use computers for problems too big to do by hand, this quantifier tends to give us a very good way to compare algorithms. Here are two common arguments against this practice: </p>
+
+          <ol>
+            <li>We don't live in asymptopia!: In the real world, problem sizes do not go to infinity. We should be practical and not use infinities to classify finite size problems. What if the input sizes that I care about are below the \(x_0\) underwhich the behavior of the resources is unknown?</li>
+            <li>Classifying a problem as "efficient" cannot be done only based on the shape of the function. What if a problem is solvable in polynomial time, but the polynomial is n to the power of 50 000? Or what if a problem takes exponential time, but the exponential is 1.000 000 01 to the power of n <a href="#footnote-7">[7]</a></li>
+          
+          </ol>
+
+          Notice that these two problems are two sides of the same coin: infinite theoretical framework vs. finite world. The answer to this is simple: it has worked great so far. In practice, we do not tend to have algorithms which stay below \(x_0\) for an input size that represents a useful problem and is too big to do by hand. As for the second point, I'll leave this quote by S. Aaronson bringing up some examples: "if cases like that regularly arose in practice, then it would’ve turned out that we were using the wrong abstraction. But so far, it seems like we’re using the right abstraction. Of the big problems solvable in polynomial time – matching, linear programming, primality testing, etc. – most of them really do have practical algorithms. And of the big problems that we think take exponential time – theorem-proving, circuit minimization, etc. – most of them really don’t have practical algorithms."<a href="#footnote-7">[7]</a>
+
           <hr>
           <p id="footnote-1">[1] Other examples of resources to be modeled by f(x) are; memory/space, T-gates, magic states, and queries</p>
           <p id="footnote-2">[2] The word algorithm is very vague in terms of mathematics. If you were to read any of the concepts related to this post in a more formal context, such as a textbook, they will use “Turing Machine” instead of "algorithm". In order to avoid extending this post further by explaining what a Turing Machine is, I decided to omit this. The ideas presented in this post will remain correct if the reader has a basic understanding of what an algorithm is. If you want to be really careful about these definitions, I recommend you learn what a Turing machine is, and replace every instance of “algorithm” with it!</p>
@@ -107,6 +122,7 @@
           <p id="footnote-5">[5] If stalling is too hand-wavy for you, you can imagine putting a for loop after using subroutine M, where the range of the loop is exponential in x. The body of the loop can be your favorite arithmetic operation or anything else that does not affect the output</p>
 
           <p id="footnote-6">[6] This operator returns 1 if at least one of the variables is 1, read <a href="https://en.wikipedia.org/wiki/Logical_disjunction#Semantics">this</a> for more details</p>
+          <p id="footnote-7">[7] Scott Aaronson. (2013) Quantum Computing Since Democritus. Page 54. Cambridge University Press. </p>
 
           
 
